# wechat-publish-sdk

./: .gitignore  ACCEPTANCE_REPORT.md  LICENSE  PUBLISH_GUIDE.md  README.md  SDK_INTEGRATION_GUIDE.md  pyproject.toml  verify_basic_sdk.py
.github/workflows/: publish.yml
examples/: basic_usage.py
tests/: test_client.py  test_integration.py
wechat_publish_sdk/: __init__.py  client.py  exceptions.py  models.py
